episode-19/auth-ingress-traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress-traefik
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-basic-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - example.com
        - www.example.com
        - admin.example.com
      secretName: example-tls
  rules:
    - host: admin.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
